# mandlebrot_egui

./: Cargo.toml  readme.md
src/: app.rs  main.rs
