[package]
name = "mandelbrot-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
image = "0.24.7"
num = "0.4.1"
rayon = "1.8.0"
mandelbrot = {git ="https://github.com/daniel-j-anderson-dev/mandlebrot.git"}